# chestra

./: .dockerignore  .ruff.toml  Dockerfile  LICENSE  README.md  chat.txt  example.py  pyproject.toml  requirements.txt  setup.py  test.yaml  volume.tst
chestra-ui/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
chestra-ui/.dart_tool/: package_config.json  package_config_subset
chestra-ui/assets/: plugins.yaml
docs/: DEVELOPER.md
plugins/: http.md  my_custom_plugin.md  my_custom_plugin.py  my_custom_plugin_test.py
prompts/: README.md  v0_prompt.md  v0_ui_specification.md
quickstart/: docker-compose.yaml
quickstart/plugins/: my_custom_plugin.py
quickstart/workflows/: test.yaml
src/chestra/: __init__.py  cli.py  log.py  orchestrator.py  plugins.py
src/chestra/plugins/: changed.py  cmd.py  df.py  end.py  http.py  start.py  touched.py
tests/: custom_workflow.yaml  test_http_plugin.py  test_plugins.py
